Suppress CVE-2023-2976 (#2611)
Suppresses CVE-2023-2976 warnings because of the usage of `org.reflections:reflections:0.9.10` in tests, which depends on `com.google:guava:15.0`, by upgrading it to 0.10.2. Additionally, fixes `XmlConfigSchemaLocationTest` and its inheritors: `ClientXmlConfigSchemaLocationTest` and `SpringXmlConfigSchemaLocationTest`.

Forwardports https://github.com/hazelcast/hazelcast-mono/pull/2514

GitOrigin-RevId: 410dd286c7ce8e9fd01b4661ef5573f0d1f13379